<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_multiple_choice"
                style="@style/fragment_multiple_choice_portrait">

    <TextView
        android:id="@+id/questionBox"
        style="@style/questionBox"
        android:text="@string/blank_question"/>

   <LinearLayout
        android:id="@+id/answer_container"
        style="@style/answer_container_vertical">

        <RadioButton
            android:id="@+id/radioBtn1"
            style="@style/radio_button_answer"
            android:text="@string/answer_option_1"/>

        <RadioButton
            android:id="@+id/radioBtn2"
            style="@style/radio_button_answer"
            android:text="@string/answer_option_2"/>

        <RadioButton
            android:id="@+id/radioBtn3"
            style="@style/radio_button_answer"
            android:text="@string/answer_option_3"/>

        <RadioButton
            android:id="@+id/radioBtn4"
            style="@style/radio_button_answer"
            android:text="@string/answer_option_4"/>
    </LinearLayout>



    <Button
        android:id="@+id/btnSubmit"
        style="@style/submitButton"
        android:text="@string/submit"/>
</RelativeLayout>
