<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                style="@style/startActivity">

    <ImageView
        style="@style/startActivityImage"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/startActivityTopButtonContainer">

        <Button

            style="@style/resultsButton"
            android:onClick="openCategorySelection"
            android:text="@string/select_a_category"/>

        <Button
            style="@style/resultsButton"
            android:onClick="openQuiz"
            android:text="@string/start_quiz"/>



        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView2"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView3"/>-->
    </LinearLayout>



    <Button
        style="@style/quitButton_Start"
        android:onClick="quitApp"
        android:text="@string/btnQuit"/>

</RelativeLayout>
